Add user and user login api
